<resources>
    <string name="app_name">Ne Pişmiş</string>
    <string name="main_activity_name">Kullanıcı Giriş</string>
    <string name="btn_str_cook">Aşçı</string>
    <string name="btn_str_market">Market</string>
    <string name="btn_str_courier">Kurye</string>
    <string name="title_activity_cook_">Cook_Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_cook">CookActivity</string>
    <string name="cook_activity_name">Siparişler</string>

    <string name="account_activity_name">Hesabım</string>
    <string name="account_activity_today">Bugün</string>
    <string name="account_activity_month">Bu Ay</string>
    <string name="account_activity_total">Toplam</string>

    <string name="comment_activity_name">Yorumlar</string>

    <string name="put_on_sale_activity_name">Satışa Koy</string>
    <string name="title_activity_menus">MenusActivity</string>
    <string name="title_morning">Sabah</string>
    <string name="title_noon">Öğle</string>
    <string name="title_evening">Akşam</string>

    <string name="request_service_activity_name">Servis İste</string>
    <string name="orders_on_sale">Satıştaki Menüler</string>


    <string name="menus_activity_name">Menülerim</string>

    <string name="profile_activity_name">Profilim</string>
    <string name="questionaire_activty_name">Anketlerim</string>
    <string name="title_activity_survey_activity">Survey_activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_manu">ManuActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_marker_ordes">MarkerOrdes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
