<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.ayzr.nepismis_v01.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_weight="1"

            app:srcCompat="@drawable/ne_pismis" />

        <Button
            android:id="@+id/button_cook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/main_round_button_cook_design"
            android:onClick="button_cook_clicked"
            android:text="@string/btn_str_cook"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button_market"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/main_round_button_market_design"
            android:onClick="button_market_clicked"
            android:text="@string/btn_str_market"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button_courier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/main_round_button_courier_design"
            android:onClick="button_courier_clicked"
            android:text="@string/btn_str_courier"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="25sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
